test: adds fixtures fetch
